12/11 C# 공부 2일차 커밋

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@
 ################################################################################
 
 /Day01/HelloCSharp/.vs/HelloCSharp/FileContentIndex/e3d3dacf-deb4-4aed-a73b-96c2c5acac35.vsidx
+/Day02/HelloCSharpWin/.vs/HelloCSharpWin/FileContentIndex
